fix: [SEI-18706]: Persist phase markers safely and add QA0
Store PropeloStageMarkerAction events as JSON to avoid Java 17 XStream
failures on nested lists, make PhaseEvent/artifact models XStream-friendly,
and add SEI-Harness-QA0 for local validation.

Co-authored-by: Cursor <cursoragent@cursor.com>